--- a/index.html
+++ b/index.html
@@ -189,9 +189,11 @@
                 <ul class="footer-list-right">
                     <li class="footer-item-right">
                         <strong class="footer-title">Connect with us</strong>
-                        <a class="footer-link" href="#">(239) 555-0108</a>
-                        <a class="footer-link" href="tel:2395550108">hello@pixer.com</a>
-                        <a class="footer-link" href="#">4140 Parker Rd. Allentown, New <br> Mexico 31134</a>
+                        <a class="footer-link" href="tel:2395550108">(239) 555-0108</a>
+                        <a class="footer-link" href="hello@pixer.com">hello@pixer.com</a>
+                        <address class="footer-link-addres">
+                            <a class="footer-link" href="#">4140 Parker Rd. Allentown, New <br> Mexico 31134</a>
+                        </address>
                     </li>
                     <li class="footer-item-social">
                         <a class="footer-link-social" href="#">
@@ -244,20 +246,20 @@
             </div>
         </div>
         <p class="line">
-        <div class="container">
-            <ul class="copyright-list">
-                <li class="copyright-item">
-                    <a class="site-footer-logo" href="index.html">
-                        <img class="site-footer-img" src="./images/site-footer-logo.svg" width="81" height="28" alt="site footer logo">
-                    </a>
-                </li>
-                <li class="copyright-item">
-                    <p class="copyright-text">Copyright © 2022 Pixer</p>
-                </li>
-            </ul>
-        </div>
-    </footer>
-    <!-- SITE FOOTER FINISH -->
-    <script src="./js/main.js"></script>
-</body>
-</html>
+            <div class="container">
+                <ul class="copyright-list">
+                    <li class="copyright-item">
+                        <a class="site-footer-logo" href="index.html">
+                            <img class="site-footer-img" src="./images/site-footer-logo.svg" width="81" height="28" alt="site footer logo">
+                        </a>
+                    </li>
+                    <li class="copyright-item">
+                        <p class="copyright-text">Copyright © 2022 Pixer</p>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+        <!-- SITE FOOTER FINISH -->
+        <script src="./js/main.js"></script>
+    </body>
+    </html>
