--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <div class="form-input-wrap">
                     <form class="form" action="https://echo.htmlacademy.ru/" method="POST">
                         <input class="input-name" type="text" name="user_name" placeholder="Name" required>
-                        <input class="input-number" type="number" name="user_name" placeholder="Phone number" required>
+                        <input class="input-number" type="number" name="user_phone" placeholder="Phone number" required>
                         <select class="input-select" name="description">
                             <option value="Web Designer">Web Designer</option>
                             <option value="SMM">SMM</option>
