--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <title>Pixer</title>
 </head>
@@ -57,7 +58,7 @@
                         <a class="hero-btn-link" href="#">Learn more</a>
                     </div>
                     <div class="hero-vedio">
-                        <iframe class="hero-vedio-iframe"  src="https://www.youtube.com/embed/gLDh9nBDnMM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="hero-vedio-iframe"  src="https://www.youtube.com/embed/gLDh9nBDnMM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -67,35 +68,35 @@
                 <div class="help-wrap">
                     <h2 class="help-title">How can we help you?</h2>
                     <ul class="help-list">
-                        <li class="help-item">
+                        <li class="help-item" data-aos="fade-left">
                             <div>
                                 <h4 class="help-item-title">Web Designer</h4>
                                 <p class="help-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim Ut enim ad minim veniam, quis </p>
                             </div>
                             <a href="#" class="help-item-link">View  more</a>
                         </li>
-                        <li class="help-item">
+                        <li class="help-item" data-aos="fade-left">
                             <div>
                                 <h4 class="help-item-title">SMM</h4>
                                 <p class="help-item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation  </p>
                             </div>
                             <a href="#" class="help-item-link">View  more</a>
                         </li>
-                        <li class="help-item">
+                        <li class="help-item" data-aos="fade-right">
                             <div>
                                 <h4 class="help-item-title">Branding</h4>
                                 <p class="help-item-text">No the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee</p>
                             </div>
                             <a href="#" class="help-item-link">View  more</a>
                         </li>
-                        <li class="help-item">
+                        <li class="help-item" data-aos="fade-left">
                             <div>
                                 <h4 class="help-item-title">Developer</h4>
                                 <p class="help-item-text">Which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our </p>
                             </div>
                             <a href="#" class="help-item-link">View  more</a>
                         </li>
-                        <li class="help-item">
+                        <li class="help-item" data-aos="fade-right">
                             <div>
                                 <h4 class="help-item-title">Graphic design</h4>
                                 <p class="help-item-text">But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted </p>
@@ -115,22 +116,22 @@
                     </div>
                     <ul class="work-list">
                         <li class="work-item">
-                            <img class="work-img" src="./images/work01.jpg" width="488" height="390" alt="">
-                            <div class="work-item-content-wrap">
+                            <img class="work-img" src="./images/work01.jpg" width="488" height="390" alt="Let's clarify the requirements" data-aos="fade-down-right">
+                            <div class="work-item-content-wrap" data-aos="fade-left">
                                 <h3 class="work-item-title">Let's clarify <br> the requirements</h3>
                                 <p class="work-item-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                             </div>
                         </li>
                         <li class="work-item">
-                            <img class="work-img" src="./images/work02.jpg" width="488" height="390" alt="">
-                            <div class="work-item-content-wrap">
+                            <img class="work-img" src="./images/work02.jpg" width="488" height="390" alt="Let's clarify the requirements" data-aos="fade-down-left">
+                            <div class="work-item-content-wrap" data-aos="fade-right">
                                 <h3 class="work-item-title">Let's clarify <br> the requirements</h3>
                                 <p class="work-item-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                             </div>
                         </li>
                         <li class="work-item">
-                            <img class="work-img" src="./images/work03.jpg" width="488" height="390" alt="">
-                            <div class="work-item-content-wrap">
+                            <img class="work-img" src="./images/work03.jpg" width="488" height="390" alt="Let's clarify the requirements" data-aos="fade-down-right">
+                            <div class="work-item-content-wrap" data-aos="fade-left">
                                 <h3 class="work-item-title">Let's clarify <br> the requirements</h3>
                                 <p class="work-item-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                             </div>
@@ -260,6 +261,7 @@
             </div>
         </footer>
         <!-- SITE FOOTER FINISH -->
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="./js/main.js"></script>
     </body>
     </html>
